# Deep-Learning2-2

./: .gitignore  prompt.md  pyproject.toml  reproduce_issue.py  requirements.txt  ruff.toml
blog/: Attentionの基本式.ipynb  RNNについて.ipynb
ch02/: count_method_small.py
ch03/: cbow_predict.py  simple_cbow.py  simple_cbow_train.py  simple_skip_gram.py  simple_skip_gram_train.py
ch04/: cbow.py  eval.py  negative_sampling_layer.py  tmp.py  train.py  word0.75.py
ch04_re/: cbow.py  negtive_sampling_layer.py  ptb_eval.py  ptb_params.pkl  simple_eval.py  simple_params.pkl  simple_train.py  tmp.py  train.py  word_predict.py
ch05/: code_explanation.md  simple_rnnlm.py  train.py  train_custom_loop.py
ch05_re/: analyze.ipynb  main.ipynb  max_itersの求め方.md  regression_rnnlm.py  simple_rnnlm.py  stock.py  time_layers.py  train.py  train_custom_loop.py  train_regression.py  trainer.py  各Timeレイヤーの入力データと重みのサイズ.md
ch05_test/: audioClassification.ipynb  layers.py
ch06/: grad_test.py
ch06_re/: better_rnnlm.py  rnnlm.py  tensor_test.py  time_layers.py  train_better_rnn.py  train_rnnlm.py
ch06_re2/: functions.py  main.py  time_layers.py
ch07/: show_addition_dataset.py
ch07_re/: data_lab.py  error_log.txt  generate_text.py  lab.py  no_train.txt  peeky_seq2seq.py  rnnlm.py  rnnlm_gen.py  seq2seq.py  show_addition_dataset.py  train.txt  train_seq2seq.py
ch08/: AttentionSeq2seq.pkl  attention_layer.ipynb  attention_layer.py  train.py
ch08_re/: AttentionSeq2seq.pkl  attention_layer.py  attention_seq2seq.py  lab1.py  lab2.py  lab3.py  lab4.py  train.py
common/: functions.py  layers.py  time_layers.py  trainer.py  util.py
conv/: main.py
data/: make_sindata.py  sin_data.csv
image2caption/: README.md
knowledge/: CuPyインストールエラー分析レポート.md  DL環境モジュール解説.md  GPU サポートの有効化.md  GPUとCuPyの動作確認ガイド.md  GPU学習でCuPyが必要な理由.md  GPU実行時エラー分析.md  Python3.12環境の再構築手順.md  Seq2Seq_学習停止問題の修正.md  pyproject.tomlの役割とは.md  (+4 more)
(+24 files in other folders)
